--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
   },
   "homepage": "https://github.com/justinbesteman/cheerio-practise#readme",
   "dependencies": {
+    "body-parser": "^1.16.0",
     "cheerio": "^0.22.0",
     "console.table": "^0.8.0",
+    "express": "^4.14.1",
     "request": "^2.79.0"
   }
 }
